# Web_HW_9

./: main.py  main1.py  pyproject.toml  test.py
Beautiful_Soup_4/: main_BS4.py  moduls.py  parser_BS4.py
Load_mongoDB/: author.json  config.ini  connect_db.py  load_json.py  models.py  quote.json
Load_mongoDB/Json/: authors.json
Load_mongoDB/Json_BS4/: authors.json  quotes.json
Scrapy/Scrapy/spiders/: author.py  quote.py
