[tool.poetry]
name = "web-hw-09"
version = "0.1.0"
description = ""
authors = ["Max <maxkryvytskyiwork@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
lxml = "^5.1.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
sqlalchemy = "^2.0.25"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
